JumpScript/tests/baselines/reference/library-reference-15.errors.txt
/a/b/consumer.jump(2,1): error TS2304: Cannot find name '$2'.


==== /a/b/consumer.jump (1 errors) ====
    $.foo(); // should OK
    $2.foo(); // should error
    ~~
!!! error TS2304: Cannot find name '$2'.
==== /a/types/jquery/index.d.jump (0 errors) ====
    declare var $: { foo(): void };
    
==== /a/types/jquery2/index.d.jump (0 errors) ====
    declare var $2: { foo(): void };
    